--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@ body {
   margin: 0;
   padding: 0;
   background-image: url('Opening.gif');
-  background-repeat: no-repeat;
+  background-repeat: repeat;
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
@@ -328,5 +328,6 @@ select {
   }
 
 }
+
 
 
