--- a/styles.css
+++ b/styles.css
@@ -3,8 +3,8 @@ body {
   font-family: 'Segoe UI', sans-serif;
   margin: 0;
   padding: 0;
-  background-image: url('Opening.gif');
-  background-repeat: repeat;
+  background-image: url('Opening1.gif');
+  background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
@@ -328,6 +328,7 @@ select {
   }
 
 }
+
 
 
 
